refactor: Fix linter warning